--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "arayJS",
+  "name": "aray",
   "description": "Array manipulation library.",
   "main": "index.js",
   "author": {
     "name": "Mark O Grady"
   },
-  "version": "0.1.0",
+  "version": "0.1.1",
   "keywords": [
     "array",
     "array manipulation"
